--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,16 +14,20 @@
 
 <body>
     <h1>
-        URL Shortner
+        URL Shortener
     </h1>
-
-    <div>
-        <form method="POST" action="/url/">
-            <label for="">Enter Your Originl URL</label>
-            <input type="text" placeholder="https://example@gmail.com" name="url" id="">
-            <button type="submit">Generate</button>
-        </form>
-    </div>
+    <% if (locals.id) { %>
+        <p>
+            URL Generated: http://localhost:8001/url/<%= id %>
+        </p>
+        <% } %> <!-- Corrected closing tag -->
+            <div>
+                <form method="POST" action="/url/">
+                    <label for="url">Enter Your Original URL</label>
+                    <input type="text" placeholder="https://example.com" name="url" id="url">
+                    <button type="submit">Generate</button>
+                </form>
+            </div>
 </body>
 
 </html>
